phase2/p_test.output
Terminals unused in grammar

   UNKNOWN
   DECL_STMNT
   ASSI_STMNT
   DECL_ASSI_STMNT
   CONST_DECL_STMNT
   EMPTY_STMNT
   ASSI_LIST
   DECL_LIST
   SWBODY
   LIST
   NOT
   "="


Grammar

    0 $accept: list $end

    1 list: statement list
    2     | %empty
    3     | susp

    4 expr: '(' expr ')'
    5     | expr '+' expr
    6     | expr '-' expr
    7     | expr '/' expr
    8     | expr '*' expr
    9     | '-' expr
   10     | expr AND expr
   11     | expr OR expr
   12     | expr XOR expr
   13     | expr EE expr
   14     | expr NE expr
   15     | expr LT expr
   16     | expr GT expr
   17     | expr LE expr
   18     | expr GE expr
   19     | '!' expr
   20     | BOOL_VAL
   21     | INT_VAL
   22     | DOUBLE_VAL
   23     | STRING_VAL
   24     | ID
   25     | '(' expr error
   26     | expr '+' error
   27     | expr '-' error
   28     | expr '/' error
   29     | expr '*' error
   30     | '-' error
   31     | expr AND error
   32     | expr OR error
   33     | expr XOR error
   34     | expr EE error
   35     | expr NE error
   36     | expr LT error
   37     | expr GT error
   38     | expr LE error
   39     | expr GE error
   40     | '!' error

   41 assi_stmnt: ID '=' expr

   42 decl_stmnt: ID_TYPE assi_stmnt

   43 statement: ';'
   44          | assi_stmnt ';'
   45          | decl_stmnt ';'
   46          | CONST decl_stmnt ';'
   47          | ID_TYPE ID ';'
   48          | IF expr ':' '{' list '}'
   49          | IF expr ':' '{' list '}' ELSE '{' list '}'
   50          | WHILE expr ':' '{' list '}'
   51          | REPEAT '{' list '}' UNTILL expr ':'
   52          | FOR '(' decl_list ';' expr ';' assi_list ')' '{' list '}'
   53          | SWITCH '[' expr ']' '{' switch_body '}'
   54          | BREAK ';'
   55          | BREAK error
   56          | assi_stmnt error
   57          | decl_stmnt error
   58          | ID_TYPE ID error
   59          | ID_TYPE error ';'
   60          | IF expr ':' '{' list error
   61          | IF expr ':' error list '}'
   62          | IF expr error '{' list '}'
   63          | IF expr ':' '{' list '}' ELSE '{' list error
   64          | IF expr ':' '{' list '}' ELSE error list '}'
   65          | IF expr ':' '{' list error ELSE '{' list '}'
   66          | IF expr ':' error list '}' ELSE '{' list '}'
   67          | IF expr error '{' list '}' ELSE '{' list '}'
   68          | WHILE expr ':' '{' list error
   69          | WHILE expr ':' error list '}'
   70          | WHILE expr error '{' list '}'
   71          | REPEAT '{' list '}' UNTILL expr error
   72          | REPEAT '{' list '}' error expr ':'
   73          | REPEAT '{' list error UNTILL expr ':'
   74          | REPEAT error list '}' UNTILL expr ':'
   75          | FOR '(' decl_list ';' expr ';' assi_list ')' '{' list error
   76          | FOR '(' decl_list ';' expr ';' assi_list ')' error list '}'
   77          | FOR '(' decl_list ';' expr ';' assi_list error '{' list '}'
   78          | FOR '(' decl_list ';' expr error assi_list ')' '{' list '}'
   79          | FOR '(' decl_list error expr ';' assi_list ')' '{' list '}'
   80          | FOR error decl_list ';' expr ';' assi_list ')' '{' list '}'
   81          | SWITCH '[' expr ']' '{' switch_body error
   82          | SWITCH '[' expr ']' error switch_body '}'
   83          | SWITCH '[' expr error '{' switch_body '}'
   84          | SWITCH error expr ']' '{' switch_body '}'

   85 assi_list: assi_stmnt ',' assi_list
   86          | assi_stmnt assi_list
   87          | %empty

   88 decl_list: ID_TYPE assi_list

   89 switch_body: case_block switch_body
   90            | %empty

   91 case_block: CASE '[' expr ']' list
   92           | DEFAULT list
   93           | CASE '[' expr error list
   94           | CASE error expr ']' list

   95 susp: '=' expr
   96     | '=' expr ';'
   97     | expr ':' '{' list '}'
   98     | expr ':' '{' list '}' ELSE '{' list '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 19 40
'(' (40) 4 25 52 75 76 77 78 79
')' (41) 4 52 75 76 78 79 80
'*' (42) 8 29
'+' (43) 5 26
',' (44) 85
'-' (45) 6 9 27 30
'/' (47) 7 28
':' (58) 48 49 50 51 60 61 63 64 65 66 68 69 72 73 74 97 98
';' (59) 43 44 45 46 47 52 54 59 75 76 77 78 79 80 96
'=' (61) 41 95 96
'[' (91) 53 81 82 83 91 93
']' (93) 53 81 82 84 91 94
'{' (123) 48 49 50 51 52 53 60 62 63 64 65 66 67 68 70 71 72 73 75
    77 78 79 80 81 83 84 97 98
'}' (125) 48 49 50 51 52 53 61 62 63 64 65 66 67 69 70 71 72 74 76
    77 78 79 80 82 83 84 97 98
error (256) 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 55 56 57
    58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 93 94
INT_VAL (258) 21
DOUBLE_VAL (259) 22
BOOL_VAL (260) 20
ID (261) 24 41 47 58
ID_TYPE (262) 42 47 58 59 88
STRING_VAL (263) 23
UNKNOWN (264)
CONST (265) 46
IF (266) 48 49 60 61 62 63 64 65 66 67
ELSE (267) 49 63 64 65 66 67 98
WHILE (268) 50 68 69 70
FOR (269) 52 75 76 77 78 79 80
REPEAT (270) 51 71 72 73 74
UNTILL (271) 51 71 73 74
SWITCH (272) 53 81 82 83 84
CASE (273) 91 93 94
DEFAULT (274) 92
BREAK (275) 54 55
AND (276) 10 31
OR (277) 11 32
XOR (278) 12 33
DECL_STMNT (279)
ASSI_STMNT (280)
DECL_ASSI_STMNT (281)
CONST_DECL_STMNT (282)
EMPTY_STMNT (283)
ASSI_LIST (284)
DECL_LIST (285)
SWBODY (286)
LIST (287)
NOT (288)
"=" (289)
EE (290) 13 34
NE (291) 14 35
LT (292) 15 36
GT (293) 16 37
LE (294) 17 38
GE (295) 18 39
UMINUS (296)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
list (58)
    on left: 1 2 3, on right: 0 1 48 49 50 51 52 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 91 92 93 94 97 98
expr (59)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40, on right: 4
    5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 25 26 27 28 29 31 32 33
    34 35 36 37 38 39 41 48 49 50 51 52 53 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 91 93 94 95
    96 97 98
assi_stmnt (60)
    on left: 41, on right: 42 44 56 85 86
decl_stmnt (61)
    on left: 42, on right: 45 46 57
statement (62)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84, on right: 1
assi_list (63)
    on left: 85 86 87, on right: 52 75 76 77 78 79 80 85 86 88
decl_list (64)
    on left: 88, on right: 52 75 76 77 78 79 80
switch_body (65)
    on left: 89 90, on right: 53 81 82 83 84 89
case_block (66)
    on left: 91 92 93 94, on right: 89
susp (67)
    on left: 95 96 97 98, on right: 3


State 0

    0 $accept: . list $end
    1 list: . statement list
    2     | . %empty  [$end]
    3     | . susp
    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   41 assi_stmnt: . ID '=' expr
   42 decl_stmnt: . ID_TYPE assi_stmnt
   43 statement: . ';'
   44          | . assi_stmnt ';'
   45          | . decl_stmnt ';'
   46          | . CONST decl_stmnt ';'
   47          | . ID_TYPE ID ';'
   48          | . IF expr ':' '{' list '}'
   49          | . IF expr ':' '{' list '}' ELSE '{' list '}'
   50          | . WHILE expr ':' '{' list '}'
   51          | . REPEAT '{' list '}' UNTILL expr ':'
   52          | . FOR '(' decl_list ';' expr ';' assi_list ')' '{' list '}'
   53          | . SWITCH '[' expr ']' '{' switch_body '}'
   54          | . BREAK ';'
   55          | . BREAK error
   56          | . assi_stmnt error
   57          | . decl_stmnt error
   58          | . ID_TYPE ID error
   59          | . ID_TYPE error ';'
   60          | . IF expr ':' '{' list error
   61          | . IF expr ':' error list '}'
   62          | . IF expr error '{' list '}'
   63          | . IF expr ':' '{' list '}' ELSE '{' list error
   64          | . IF expr ':' '{' list '}' ELSE error list '}'
   65          | . IF expr ':' '{' list error ELSE '{' list '}'
   66          | . IF expr ':' error list '}' ELSE '{' list '}'
   67          | . IF expr error '{' list '}' ELSE '{' list '}'
   68          | . WHILE expr ':' '{' list error
   69          | . WHILE expr ':' error list '}'
   70          | . WHILE expr error '{' list '}'
   71          | . REPEAT '{' list '}' UNTILL expr error
   72          | . REPEAT '{' list '}' error expr ':'
   73          | . REPEAT '{' list error UNTILL expr ':'
   74          | . REPEAT error list '}' UNTILL expr ':'
   75          | . FOR '(' decl_list ';' expr ';' assi_list ')' '{' list error
   76          | . FOR '(' decl_list ';' expr ';' assi_list ')' error list '}'
   77          | . FOR '(' decl_list ';' expr ';' assi_list error '{' list '}'
   78          | . FOR '(' decl_list ';' expr error assi_list ')' '{' list '}'
   79          | . FOR '(' decl_list error expr ';' assi_list ')' '{' list '}'
   80          | . FOR error decl_list ';' expr ';' assi_list ')' '{' list '}'
   81          | . SWITCH '[' expr ']' '{' switch_body error
   82          | . SWITCH '[' expr ']' error switch_body '}'
   83          | . SWITCH '[' expr error '{' switch_body '}'
   84          | . SWITCH error expr ']' '{' switch_body '}'
   95 susp: . '=' expr
   96     | . '=' expr ';'
   97     | . expr ':' '{' list '}'
   98     | . expr ':' '{' list '}' ELSE '{' list '}'

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 4
    ID_TYPE     shift, and go to state 5
    STRING_VAL  shift, and go to state 6
    CONST       shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    FOR         shift, and go to state 10
    REPEAT      shift, and go to state 11
    SWITCH      shift, and go to state 12
    BREAK       shift, and go to state 13
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16
    '='         shift, and go to state 17
    ';'         shift, and go to state 18

    $default  reduce using rule 2 (list)

    list        go to state 19
    expr        go to state 20
    assi_stmnt  go to state 21
    decl_stmnt  go to state 22
    statement   go to state 23
    susp        go to state 24


State 1

   21 expr: INT_VAL .

    $default  reduce using rule 21 (expr)


State 2

   22 expr: DOUBLE_VAL .

    $default  reduce using rule 22 (expr)


State 3

   20 expr: BOOL_VAL .

    $default  reduce using rule 20 (expr)


State 4

   24 expr: ID .  [AND, OR, XOR, EE, NE, LT, GT, LE, GE, '+', '-', '/', '*', ':']
   41 assi_stmnt: ID . '=' expr

    '='  shift, and go to state 25

    $default  reduce using rule 24 (expr)


State 5

   41 assi_stmnt: . ID '=' expr
   42 decl_stmnt: ID_TYPE . assi_stmnt
   47 statement: ID_TYPE . ID ';'
   58          | ID_TYPE . ID error
   59          | ID_TYPE . error ';'

    error  shift, and go to state 26
    ID     shift, and go to state 27

    assi_stmnt  go to state 28


State 6

   23 expr: STRING_VAL .

    $default  reduce using rule 23 (expr)


State 7

   42 decl_stmnt: . ID_TYPE assi_stmnt
   46 statement: CONST . decl_stmnt ';'

    ID_TYPE  shift, and go to state 29

    decl_stmnt  go to state 30


State 8

    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   48 statement: IF . expr ':' '{' list '}'
   49          | IF . expr ':' '{' list '}' ELSE '{' list '}'
   60          | IF . expr ':' '{' list error
   61          | IF . expr ':' error list '}'
   62          | IF . expr error '{' list '}'
   63          | IF . expr ':' '{' list '}' ELSE '{' list error
   64          | IF . expr ':' '{' list '}' ELSE error list '}'
   65          | IF . expr ':' '{' list error ELSE '{' list '}'
   66          | IF . expr ':' error list '}' ELSE '{' list '}'
   67          | IF . expr error '{' list '}' ELSE '{' list '}'

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 32


State 9

    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   50 statement: WHILE . expr ':' '{' list '}'
   68          | WHILE . expr ':' '{' list error
   69          | WHILE . expr ':' error list '}'
   70          | WHILE . expr error '{' list '}'

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 33


State 10

   52 statement: FOR . '(' decl_list ';' expr ';' assi_list ')' '{' list '}'
   75          | FOR . '(' decl_list ';' expr ';' assi_list ')' '{' list error
   76          | FOR . '(' decl_list ';' expr ';' assi_list ')' error list '}'
   77          | FOR . '(' decl_list ';' expr ';' assi_list error '{' list '}'
   78          | FOR . '(' decl_list ';' expr error assi_list ')' '{' list '}'
   79          | FOR . '(' decl_list error expr ';' assi_list ')' '{' list '}'
   80          | FOR . error decl_list ';' expr ';' assi_list ')' '{' list '}'

    error  shift, and go to state 34
    '('    shift, and go to state 35


State 11

   51 statement: REPEAT . '{' list '}' UNTILL expr ':'
   71          | REPEAT . '{' list '}' UNTILL expr error
   72          | REPEAT . '{' list '}' error expr ':'
   73          | REPEAT . '{' list error UNTILL expr ':'
   74          | REPEAT . error list '}' UNTILL expr ':'

    error  shift, and go to state 36
    '{'    shift, and go to state 37


State 12

   53 statement: SWITCH . '[' expr ']' '{' switch_body '}'
   81          | SWITCH . '[' expr ']' '{' switch_body error
   82          | SWITCH . '[' expr ']' error switch_body '}'
   83          | SWITCH . '[' expr error '{' switch_body '}'
   84          | SWITCH . error expr ']' '{' switch_body '}'

    error  shift, and go to state 38
    '['    shift, and go to state 39


State 13

   54 statement: BREAK . ';'
   55          | BREAK . error

    error  shift, and go to state 40
    ';'    shift, and go to state 41


State 14

    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
    9     | '-' . expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   30     | '-' . error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error

    error       shift, and go to state 42
    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 43


State 15

    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   19     | '!' . expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   40     | '!' . error

    error       shift, and go to state 44
    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 45


State 16

    4 expr: . '(' expr ')'
    4     | '(' . expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   25     | '(' . expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 46


State 17

    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   95 susp: '=' . expr
   96     | '=' . expr ';'

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 47


State 18

   43 statement: ';' .

    $default  reduce using rule 43 (statement)


State 19

    0 $accept: list . $end

    $end  shift, and go to state 48


State 20

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '/' expr
    8     | expr . '*' expr
   10     | expr . AND expr
   11     | expr . OR expr
   12     | expr . XOR expr
   13     | expr . EE expr
   14     | expr . NE expr
   15     | expr . LT expr
   16     | expr . GT expr
   17     | expr . LE expr
   18     | expr . GE expr
   26     | expr . '+' error
   27     | expr . '-' error
   28     | expr . '/' error
   29     | expr . '*' error
   31     | expr . AND error
   32     | expr . OR error
   33     | expr . XOR error
   34     | expr . EE error
   35     | expr . NE error
   36     | expr . LT error
   37     | expr . GT error
   38     | expr . LE error
   39     | expr . GE error
   97 susp: expr . ':' '{' list '}'
   98     | expr . ':' '{' list '}' ELSE '{' list '}'

    AND  shift, and go to state 49
    OR   shift, and go to state 50
    XOR  shift, and go to state 51
    EE   shift, and go to state 52
    NE   shift, and go to state 53
    LT   shift, and go to state 54
    GT   shift, and go to state 55
    LE   shift, and go to state 56
    GE   shift, and go to state 57
    '+'  shift, and go to state 58
    '-'  shift, and go to state 59
    '/'  shift, and go to state 60
    '*'  shift, and go to state 61
    ':'  shift, and go to state 62


State 21

   44 statement: assi_stmnt . ';'
   56          | assi_stmnt . error

    error  shift, and go to state 63
    ';'    shift, and go to state 64


State 22

   45 statement: decl_stmnt . ';'
   57          | decl_stmnt . error

    error  shift, and go to state 65
    ';'    shift, and go to state 66


State 23

    1 list: . statement list
    1     | statement . list
    2     | . %empty  [$end, error, CASE, DEFAULT, '}']
    3     | . susp
    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   41 assi_stmnt: . ID '=' expr
   42 decl_stmnt: . ID_TYPE assi_stmnt
   43 statement: . ';'
   44          | . assi_stmnt ';'
   45          | . decl_stmnt ';'
   46          | . CONST decl_stmnt ';'
   47          | . ID_TYPE ID ';'
   48          | . IF expr ':' '{' list '}'
   49          | . IF expr ':' '{' list '}' ELSE '{' list '}'
   50          | . WHILE expr ':' '{' list '}'
   51          | . REPEAT '{' list '}' UNTILL expr ':'
   52          | . FOR '(' decl_list ';' expr ';' assi_list ')' '{' list '}'
   53          | . SWITCH '[' expr ']' '{' switch_body '}'
   54          | . BREAK ';'
   55          | . BREAK error
   56          | . assi_stmnt error
   57          | . decl_stmnt error
   58          | . ID_TYPE ID error
   59          | . ID_TYPE error ';'
   60          | . IF expr ':' '{' list error
   61          | . IF expr ':' error list '}'
   62          | . IF expr error '{' list '}'
   63          | . IF expr ':' '{' list '}' ELSE '{' list error
   64          | . IF expr ':' '{' list '}' ELSE error list '}'
   65          | . IF expr ':' '{' list error ELSE '{' list '}'
   66          | . IF expr ':' error list '}' ELSE '{' list '}'
   67          | . IF expr error '{' list '}' ELSE '{' list '}'
   68          | . WHILE expr ':' '{' list error
   69          | . WHILE expr ':' error list '}'
   70          | . WHILE expr error '{' list '}'
   71          | . REPEAT '{' list '}' UNTILL expr error
   72          | . REPEAT '{' list '}' error expr ':'
   73          | . REPEAT '{' list error UNTILL expr ':'
   74          | . REPEAT error list '}' UNTILL expr ':'
   75          | . FOR '(' decl_list ';' expr ';' assi_list ')' '{' list error
   76          | . FOR '(' decl_list ';' expr ';' assi_list ')' error list '}'
   77          | . FOR '(' decl_list ';' expr ';' assi_list error '{' list '}'
   78          | . FOR '(' decl_list ';' expr error assi_list ')' '{' list '}'
   79          | . FOR '(' decl_list error expr ';' assi_list ')' '{' list '}'
   80          | . FOR error decl_list ';' expr ';' assi_list ')' '{' list '}'
   81          | . SWITCH '[' expr ']' '{' switch_body error
   82          | . SWITCH '[' expr ']' error switch_body '}'
   83          | . SWITCH '[' expr error '{' switch_body '}'
   84          | . SWITCH error expr ']' '{' switch_body '}'
   95 susp: . '=' expr
   96     | . '=' expr ';'
   97     | . expr ':' '{' list '}'
   98     | . expr ':' '{' list '}' ELSE '{' list '}'

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 4
    ID_TYPE     shift, and go to state 5
    STRING_VAL  shift, and go to state 6
    CONST       shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    FOR         shift, and go to state 10
    REPEAT      shift, and go to state 11
    SWITCH      shift, and go to state 12
    BREAK       shift, and go to state 13
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16
    '='         shift, and go to state 17
    ';'         shift, and go to state 18

    $default  reduce using rule 2 (list)

    list        go to state 67
    expr        go to state 20
    assi_stmnt  go to state 21
    decl_stmnt  go to state 22
    statement   go to state 23
    susp        go to state 24


State 24

    3 list: susp .

    $default  reduce using rule 3 (list)


State 25

    4 expr: . '(' expr ')'
    5     | . expr '+' expr
    6     | . expr '-' expr
    7     | . expr '/' expr
    8     | . expr '*' expr
    9     | . '-' expr
   10     | . expr AND expr
   11     | . expr OR expr
   12     | . expr XOR expr
   13     | . expr EE expr
   14     | . expr NE expr
   15     | . expr LT expr
   16     | . expr GT expr
   17     | . expr LE expr
   18     | . expr GE expr
   19     | . '!' expr
   20     | . BOOL_VAL
   21     | . INT_VAL
   22     | . DOUBLE_VAL
   23     | . STRING_VAL
   24     | . ID
   25     | . '(' expr error
   26     | . expr '+' error
   27     | . expr '-' error
   28     | . expr '/' error
   29     | . expr '*' error
   30     | . '-' error
   31     | . expr AND error
   32     | . expr OR error
   33     | . expr XOR error
   34     | . expr EE error
   35     | . expr NE error
   36     | . expr LT error
   37     | . expr GT error
   38     | . expr LE error
   39     | . expr GE error
   40     | . '!' error
   41 assi_stmnt: ID '=' . expr

    INT_VAL     shift, and go to state 1
    DOUBLE_VAL  shift, and go to state 2
    BOOL_VAL    shift, and go to state 3
    ID          shift, and go to state 31
    STRING_VAL  shift, and go to state 6
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '('         shift, and go to state 16

    expr  go to state 68


State 26

   59 statement: ID_TYPE error . ';'

    ';'  shift, and go to state 69


State 27

   41 assi_stmnt: ID . '=' expr
   47 statement: ID_TYPE ID . ';'
   58          | ID_TYPE ID . error

    error  shift, and go to state 70
    '='    shift, and go to state 25
    ';'    shift, and go to state 71


State 28

   42 decl_stmnt: ID_TYPE assi_stmnt .

    $default  reduce using rule 42 (decl_stmnt)


State 29

   41 assi_stmnt: . ID '=' expr
   42 decl_stmnt: ID_TYPE . assi_stmnt

    ID  shift, and go to state 72

    assi_stmnt  go to state 28


State 30

   46 statement: CONST decl_stmnt . ';'

    ';'  shift, and go to state 73


State 31

   24 expr: ID .

    $default  reduce using rule 24 (expr)


State 32
